use project.getRootProject().getPath()